--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>焦点轮播图</title>
     <link rel="stylesheet" href="./css/main.css" type="text/css" />
+    <script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
     <div id="container">
@@ -26,5 +27,6 @@
         <a href="javascript:;" class="arrow" id="prev">&lt;</a>
         <a href="javascript:;" class="arrow" id="next">&gt;</a>
     </div>
+   
 </body>
 </html>
