--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <title>焦点轮播图</title>
     <link rel="stylesheet" href="./css/main.css" type="text/css" />
     <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/config.js"></script>
 </head>
 <body>
     <div id="container">
         <div id="list" style="left: -600px;" >
-            <img src="img/5.jpg" alt="1" />
             <img src="img/1.jpg" alt="1" />
             <img src="img/2.jpg" alt="2" />
             <img src="img/3.jpg" alt="3" />
             <img src="img/4.jpg" alt="4" />
             <img src="img/5.jpg" alt="5" />
-            <img src="img/1.jpg" alt="5" />
         </div>
         <div id="buttons">
             <span index="1" class="on" ></span>
